tests/NormalTests/paczka1/fuzzy1/15795861.err
Error in line 17: MFB A510 69,0
Error in line 16: b6qh S542 64,8
Error in line 21: b6qh S821 1,2
Error in line 28: b6qh A560 8,3
Error in line 32: S542 A510 17,6
